--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Mappers\**" />
+    <Content Remove="Models\Mappers\**" />
+    <EmbeddedResource Remove="Models\Mappers\**" />
+    <None Remove="Models\Mappers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="F23.StringSimilarity" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.12" />
@@ -18,7 +25,6 @@
 
   <ItemGroup>
     <Folder Include="Models\Dtos\" />
-    <Folder Include="Models\Mappers\" />
   </ItemGroup>
 
 </Project>
