--- a/Frontend/moveinn/package.json
+++ b/Frontend/moveinn/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.1.7",
@@ -25,12 +25,13 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
+    "react-datepicker": "^8.3.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
