--- a/Frontend/moveinn/package.json
+++ b/Frontend/moveinn/package.json
@@ -30,6 +30,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-world-flags": "^1.6.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5"
   },
