--- a/Frontend/moveinn/package.json
+++ b/Frontend/moveinn/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
+    "@stripe/react-stripe-js": "^3.6.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,14 +30,15 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
     "react-world-flags": "^1.6.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
-    "zod": "^3.24.3",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
