--- a/Frontend/moveinn/package.json
+++ b/Frontend/moveinn/package.json
@@ -26,9 +26,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.9.7",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^8.10.1",
