--- a/Frontend/moveinn/package.json
+++ b/Frontend/moveinn/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^12.9.7",
     "jwt-decode": "^4.0.0",
