--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,13 +22,8 @@ jobs:
         with:
           aws-access-key-id:     ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token:     ${{ secrets.AWS_SESSION_TOKEN }}
+          # aws-session-token:     ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region:            us-east-1
-      - name: Debug AWS env
-        run: |
-            echo "AWS_ACCESS_KEY_ID = ${{secrets.AWS_ACCESS_KEY_ID}}"
-            echo "AWS_SECRET_ACCESS_KEY = ${{secrets.AWS_SECRET_ACCESS_KEY}}"
-            echo "AWS_REGION = ${{secrets.AWS_REGION}}"
         
 
   deploy-backend:
