--- a/Frontend/moveinn/tsconfig.json
+++ b/Frontend/moveinn/tsconfig.json
@@ -24,9 +24,11 @@
     ],
     "paths": {
       "@/*": [
-        "./src/*"
+        "src/*"
       ]
-    }
+    },
+    "baseUrl": ".",
+
   },
   "include": [
     "next-env.d.ts",
