--- a/appspec.yml
+++ b/appspec.yml
@@ -4,21 +4,32 @@ os: linux
 files:
   - source: Frontend/moveinn
     destination: /var/www/Frontend
+
+  - source: Backend/Backend/publish
+    destination: /var/www/backend    
+
 file_exists_behavior: OVERWRITE       
 
 hooks:
   BeforeInstall:
     - location: scripts/before_install_frontend.sh
       timeout: 180
-      runas: root        
-
+      runas: root
+    - location: scripts/before_install_backend.sh
+      timeout: 180
+      runas: root                      
   AfterInstall:
     - location: scripts/after_install_frontend.sh
       timeout: 600
       runas: ubuntu        
-
+    - location: scripts/after_install_backend.sh
+      timeout: 600
+      runas: ubuntu   
   ApplicationStart:
     - location: scripts/start_frontend.sh
       timeout: 120
-      runas: ubuntu        
+      runas: ubuntu 
+    - location: scripts/start_backend.sh
+      timeout: 120
+      runas: ubuntu               
 
