--- a/Frontend/moveinn/package.json
+++ b/Frontend/moveinn/package.json
@@ -26,8 +26,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
+    "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^12.9.7",
+    "i18n-iso-countries": "^7.14.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
@@ -38,6 +40,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
     "react-world-flags": "^1.6.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
