--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -5,6 +5,8 @@ on:
     branches: [ main ]
     paths:
       - 'Backend/**'
+      - '.github/workflows/deploy-backend.yml'
+
 
 permissions:
   contents: read
