--- a/appspec.yml
+++ b/appspec.yml
@@ -2,8 +2,8 @@ version: 0.0
 os: linux
 
 files:
-  - source: Frontend/moveinn
-    destination: /var/www/Frontend
+  # - source: Frontend/moveinn
+  #   destination: /var/www/Frontend
 
   - source: Backend/Backend/publish
     destination: /var/www/backend    
@@ -12,23 +12,23 @@ file_exists_behavior: OVERWRITE
 
 hooks:
   BeforeInstall:
-    - location: scripts/before_install_frontend.sh
-      timeout: 180
-      runas: root
+    # - location: scripts/before_install_frontend.sh
+    #   timeout: 180
+    #   runas: root
     - location: scripts/before_install_backend.sh
       timeout: 180
       runas: root                      
   AfterInstall:
-    - location: scripts/after_install_frontend.sh
-      timeout: 600
-      runas: root        
+    # - location: scripts/after_install_frontend.sh
+    #   timeout: 600
+    #   runas: root        
     - location: scripts/after_install_backend.sh
       timeout: 600
       runas: root   
   ApplicationStart:
-    - location: scripts/start_frontend.sh
-      timeout: 120
-      runas: root 
+    # - location: scripts/start_frontend.sh
+    #   timeout: 120
+    #   runas: root 
     - location: scripts/start_backend.sh
       timeout: 120
       runas: root               
