--- a/Backend/Backend/appsettings.json
+++ b/Backend/Backend/appsettings.json
@@ -12,7 +12,7 @@
     },
 
     "ConnectionStrings": {
-        "Default": "server=moveinn-mysql.cipvvkxru3e2.us-east-1.rds.amazonaws.com;port=3306;database=MoveInnDB;user=moveinn_admin;password=fKQWZIBQiTMOMCSueqnMx;sslmode=Preferred;Connect Timeout=5;"
+        "Default": "server=moveinndb.cqka2hwjvzib.us-east-1.rds.amazonaws.com;port=3306;database=moveinndb;user=moveinn_admin;password=fKQWZIBQiTMOMCSueqnMx;sslmode=Preferred;Connect Timeout=5;"
     },
 
     "AllowedHosts": "*"
